WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213560
Removed the 50ms rescheduling timeout from callOnMainThread
https://bugs.webkit.org/show_bug.cgi?id=213560
Summary
Removed the 50ms rescheduling timeout from callOnMainThread
Geoffrey Garen
Reported
2020-06-24 08:18:42 PDT
Removed the 50ms rescheduling timeout from callOnMainThread
Attachments
Patch
(2.75 KB, patch)
2020-06-24 08:23 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2020-06-24 08:23:20 PDT
Created
attachment 402652
[details]
Patch
Geoffrey Garen
Comment 2
2020-06-24 09:35:50 PDT
Looks like the EWS mac-debug-wk1 failure in fullscreen/video-inside-flex-item.html is not new, so I will ignore it.
EWS
Comment 3
2020-06-24 09:38:48 PDT
Committed
r263461
: <
https://trac.webkit.org/changeset/263461
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402652
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-06-24 09:39:15 PDT
<
rdar://problem/64705949
>
Radar WebKit Bug Importer
Comment 5
2020-06-24 09:39:16 PDT
<
rdar://problem/64705951
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug